Fix z-index on slider arrows

--- a/styles/slick-theme.css
+++ b/styles/slick-theme.css
@@ -7,7 +7,7 @@
     display: inline-block;
     width: 48px;
     height: 48px;
-    z-index: 50;
+    z-index: 48;
     padding: 0;
     cursor: pointer;
     border: none;
